--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "promise with cancel method and timer",
   "main": "PromiseWithTimer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/StetsD/promise-with-timer/issues"
   },
-  "homepage": "https://github.com/StetsD/promise-with-timer#readme"
+  "homepage": "https://github.com/StetsD/promise-with-timer#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.2.0"
+  }
 }
